force-app/main/default/objects/FieloEE__EmailCampaign__c/fields/FieloEE__DateSchedule__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__DateSchedule__c</fullName>
    <label>zz_deprecated_Date Schedule</label>
    <type>DateTime</type>
</CustomField>