force-app/main/default/objects/FieloEE__EmailCampaign__c/fields/FieloEE__DeliveryOptions__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__DeliveryOptions__c</fullName>
    <label>zz_deprecated_Delivery Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Now</fullName>
                <default>true</default>
                <label>Now</label>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>