force-app/main/default/objects/FieloEE__EmailCampaign__c/fields/FieloEE__FilterMember__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FilterMember__c</fullName>
    <label>zz_deprecated_Filter Member</label>
    <length>80</length>
    <type>Text</type>
</CustomField>