force-app/main/default/objects/FieloEE__EmailCampaign__c/fields/FieloEE__JobId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__JobId__c</fullName>
    <label>Job Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>