force-app/main/default/objects/FieloEE__EmailCampaign__c/fields/FieloEE__JobLink__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__JobLink__c</fullName>
    <formula>IF ( ISBLANK(FieloEE__JobId__c ) , &#39;&#39;,  HYPERLINK(&#39;/ui/setup/apex/batch/ScheduleBatchApexPage?pid=&#39; +  FieloEE__JobId__c +&#39;&amp;job_name=&#39; +Name , &#39;Schedule Job&#39; )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz_deprecated_Job Link</label>
    <type>Text</type>
</CustomField>