force-app/main/default/objects/FieloEE__EmailCampaign__c/fields/FieloEE__SendBy__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__SendBy__c</fullName>
    <label>zz_deprecated_Send by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fielo</fullName>
                <default>true</default>
                <label>Fielo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>