force-app/main/default/objects/FieloEE__EmailCampaign__c/validationRules/FieloEE__Schedule_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Schedule_Date</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  ISPICKVAL(FieloEE__DeliveryOptions__c , &#39;Schedule&#39;)  ,
              IF(FieloEE__DateSchedule__c &lt;=  NOW(), true, false)
, false)</errorConditionFormula>
    <errorDisplayField>FieloEE__DateSchedule__c</errorDisplayField>
    <errorMessage>The scheduled date cannot be less than today</errorMessage>
</ValidationRule>