force-app/main/default/objects/FieloEE__EmailCampaign__c/validationRules/FieloEE__ScheduleDateRequiered.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__ScheduleDateRequiered</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL(FieloEE__DeliveryOptions__c , &#39;Schedule&#39;) ,
IF(  ISNULL( FieloEE__DateSchedule__c ) , true, false)
, false)</errorConditionFormula>
    <errorDisplayField>FieloEE__DateSchedule__c</errorDisplayField>
    <errorMessage>Scheduled Date is required</errorMessage>
</ValidationRule>