force-app/main/default/objects/FieloEE__EmailCampaign__c/listViews/FieloEE__All_Email_Campaigns.listView-meta.xml
<ListView>
    <fullName>FieloEE__All_Email_Campaigns</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Email Campaigns</label>
    <language>en_US</language>
</ListView>